--- a/microservice-commandes.properties
+++ b/microservice-commandes.properties
@@ -1,6 +1,6 @@
 server.port=8081
 
-spring.datasource.url=jdbc:h2:mem:commande_db
+spring.datasource.url=jdbc:h2:file:./commande_db
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
