--- a/microservice-commandes.properties
+++ b/microservice-commandes.properties
@@ -9,6 +9,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-management.endpoints.web.exposure.include=refresh,health
+management.endpoints.web.exposure.include=refresh,env,mappings,health
 
 mes-config-ms.commandes-last=10
